--- a/index.html
+++ b/index.html
@@ -5,17 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Bootstrap 101 Template</title>
+    <title>GTD</title>
     
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">   
+    <link href="styles/bootstrap.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+    <link href="styles/style.css" rel="stylesheet">   
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="header">
+      <div class="container">
+        <h1>GET THINGS DONE</h1>
+      </div>     
+    </div>
 
-    <script src="js/jquery-1.11.3.min.js"></script>
+    <div class="top-menu">
+      <div class="container">
+        <button type="button" class="btn btn-default selected" id="pending">Pending</button>
+        <button type="button" class="btn btn-default" id="completed">Completed</button> 
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="container">
+        <div class="list">
+        </div>
+      </div>
+    </div>
+
+    <form class="form">
+        <div class="form-container">
+          <input id="todo" type="text" class="form-input" placeholder="Add task">
+        </div>
+        <button type="submit" class="btn btn-default">+</button>
+      </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="scripts/jquery-1.11.3.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
