--- a/index.html
+++ b/index.html
@@ -18,10 +18,24 @@
       </div>     
     </div>
 
-    <div class="top-menu">
+    <div class="menu top">
       <div class="container">
-        <button type="button" class="btn btn-default selected" id="pending">Pending</button>
-        <button type="button" class="btn btn-default" id="completed">Completed</button> 
+        <button type="button" class="btn active" id="pending"><a href="#">Pending</a></button>
+        <button type="button" class="btn" id="completed"><a href="#">Completed</a></button>
+        <button type="button" class="btn active" id="all"><a href="#">All</a></button>
+        <button type="button" class="btn" id="work"><a href="#">Work</a></button>
+        <button type="button" class="btn" id="home"><a href="#">Home</a></button> 
+      </div>
+    </div>
+
+    <div class="menu middle">
+      <div class="container">
+        <button type="button" class="btn active" id="all"><a href="#">All</a></button>
+        <button type="button" class="btn" id="now"><a href="#">Now</a></button>
+        <button type="button" class="btn" id="next"><a href="#">Next</a></button> 
+        <button type="button" class="btn" id="soon"><a href="#">Soon</a></button>
+        <button type="button" class="btn" id="later"><a href="#">Later</a></button>
+        <button type="button" class="btn" id="waiting"><a href="#">Waiting</a></button>
       </div>
     </div>
 
@@ -33,11 +47,11 @@
     </div>
 
     <form class="form">
-        <div class="form-container">
-          <input id="todo" type="text" class="form-input" placeholder="Add task">
-        </div>
-        <button type="submit" class="btn btn-default">+</button>
-      </form>
+      <div class="form-container">
+        <input id="todo" type="text" class="form-input" placeholder="Add task">
+      </div>
+      <button type="submit" class="btn btn-default">+</button>
+    </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="scripts/jquery-1.11.3.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
