--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>GTD</title>
+    <title>ngdaniele</title>
+    <link rel="icon" type="image/ico" href="images/favicon.ico">
     
     <link href="styles/bootstrap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
@@ -14,44 +15,93 @@
   <body>
     <div class="header">
       <div class="container">
-        <h1>GET THINGS DONE</h1>
-      </div>     
-    </div>
+        <div class="row">
+          <div class="col-md-3">
+            <h1>Nick Daniele</h1>
+          </div>
+          <div class="col-md-9">
+            <ul class="nav nav-tabs pull-right">
+              <li><a href="https://twitter.com/Nick_Daniele">Twitter</a></li>
+              <li><a href="https://github.com/Lefty9200">GitHub</a></li>
+              <li><a href="https://www.linkedin.com/in/nicholas-daniele-68969934">LinkedIn</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>  
 
-    <div class="menu top">
+    <div class="jumbotron">
       <div class="container">
-        <button type="button" class="btn active" id="pending"><a href="#">Pending</a></button>
-        <button type="button" class="btn" id="completed"><a href="#">Completed</a></button>
-        <button type="button" class="btn active" id="all"><a href="#">All</a></button>
-        <button type="button" class="btn" id="work"><a href="#">Work</a></button>
-        <button type="button" class="btn" id="home"><a href="#">Home</a></button> 
+        <h2>Looking to break into
+          <br>
+          <span>Web-development and Design</span>.
+          <br>
+          See what I can do below!
+        </h2>
       </div>
     </div>
 
-    <div class="menu middle">
+    <div class="banner">
       <div class="container">
-        <button type="button" class="btn active" id="all"><a href="#">All</a></button>
-        <button type="button" class="btn" id="now"><a href="#">Now</a></button>
-        <button type="button" class="btn" id="next"><a href="#">Next</a></button> 
-        <button type="button" class="btn" id="soon"><a href="#">Soon</a></button>
-        <button type="button" class="btn" id="later"><a href="#">Later</a></button>
-        <button type="button" class="btn" id="waiting"><a href="#">Waiting</a></button>
-      </div>
+        <h3>Languages</h3>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="images/html.png">
+          </div>    
+          <div class="col-md-4">
+            <img src="images/css.png">  
+          </div>
+          <div class="col-md-4">
+            <img src="images/js.png">  
+          </div>
+        </div>
+      </div> 
     </div>
 
-    <div class="main">
+    <div class="banner">
       <div class="container">
-        <div class="list">
+        <h3>Tools</h3>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="images/bootstrap.png">
+          </div>    
+          <div class="col-md-4">
+            <img src="images/jquery.png">  
+          </div>
+          <div class="col-md-4">
+            <img src="images/github.png">  
+          </div>
+        </div>
+      </div> 
+    </div>
+
+    <div class="projects">
+      <div class="container">
+        <h1>Projects</h1>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="images/intheworks.jpg">
+          </div>
+          <div class="col-md-4">
+            <img src="images/intheworks.jpg">
+          </div>
+          <div class="col-md-4">
+            <img src="images/intheworks.jpg">
+          </div>
         </div>
       </div>
     </div>
 
-    <form class="form">
-      <div class="form-container">
-        <input id="todo" type="text" class="form-input" placeholder="Add task">
-      </div>
-      <button type="submit" class="btn btn-default">+</button>
-    </form>
+    <div class="contact">
+      <div class="container">
+        <h3>Contact</h3>
+        <p>If you'd like to get in touch email ngdaniele (at) gmail (dot) com or send me a message via social media.</p>
+        <a href="https://www.linkedin.com/in/nicholas-daniele-68969934"><img src="images/linkedinsm.png"></a>
+        <a href="https://twitter.com/Nick_Daniele"><img src="images/twittersm.png"></a>  
+        <a href="https://github.com/Lefty9200"><img src="images/githubsm.png"></a>  
+        </div>
+      </div> 
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="scripts/jquery-1.11.3.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
