--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
       <div class="container">
         <h3>Languages</h3>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-sm-4 col-md-4">
             <img src="images/html.png">
           </div>    
-          <div class="col-md-4">
+          <div class="col-sm-4 col-md-4">
             <img src="images/css.png">  
           </div>
-          <div class="col-md-4">
+          <div class="col-sm-4 col-md-4">
             <img src="images/js.png">  
           </div>
         </div>
@@ -62,13 +62,13 @@
       <div class="container">
         <h3>Tools</h3>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-sm-4 col-md-4">
             <img src="images/bootstrap.png">
           </div>    
-          <div class="col-md-4">
+          <div class="col-sm-4 col-md-4">
             <img src="images/jquery.png">  
           </div>
-          <div class="col-md-4">
+          <div class="col-sm-4 col-md-4">
             <img src="images/github.png">  
           </div>
         </div>
@@ -79,14 +79,15 @@
       <div class="container">
         <h1>Projects</h1>
         <div class="row">
-          <div class="col-md-4">
-            <img src="images/intheworks.jpg">
-          </div>
-          <div class="col-md-4">
-            <img src="images/intheworks.jpg">
-          </div>
-          <div class="col-md-4">
-            <img src="images/intheworks.jpg">
+          <div class="col-sm-12 col-md-12">
+            <a href="#">
+              <figure class="gallery-item">
+                <img src="images/jackwelpott.jpg" class="img-responsive" alt="Responsive image">
+                <figcaption class="img-title">
+                  <p>Photography Website<br>Languages: HTML, CSS, Javascript, PHP</p>    
+                </figcaption>
+              </figure>
+            </a>
           </div>
         </div>
       </div>
@@ -99,9 +100,8 @@
         <a href="https://www.linkedin.com/in/nicholas-daniele-68969934"><img src="images/linkedinsm.png"></a>
         <a href="https://twitter.com/Nick_Daniele"><img src="images/twittersm.png"></a>  
         <a href="https://github.com/Lefty9200"><img src="images/githubsm.png"></a>  
-        </div>
-      </div> 
-    </div>
+      </div>
+    </div> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="scripts/jquery-1.11.3.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
