Updated website with new projects

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <div class="col-md-9">
             <ul class="nav nav-tabs pull-right">
               <li><a href="https://twitter.com/Nick_Daniele">Twitter</a></li>
-              <li><a href="https://github.com/Lefty9200">GitHub</a></li>
-              <li><a href="https://www.linkedin.com/in/nicholas-daniele-68969934">LinkedIn</a></li>
+              <li><a href="https://github.com/nickdaniele">GitHub</a></li>
+              <li><a href="https://www.linkedin.com/in/ngdaniele">LinkedIn</a></li>
             </ul>
           </div>
         </div>
@@ -32,47 +32,13 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h2>Looking to break into
+        <h2>Software Engineer with a passion for 
           <br>
           <span>Web-development and Design</span>.
           <br>
-          See what I can do below!
+          See current projects below!
         </h2>
       </div>
-    </div>
-
-    <div class="banner">
-      <div class="container">
-        <h3>Languages</h3>
-        <div class="row">
-          <div class="col-sm-4 col-md-4">
-            <img src="images/html.png">
-          </div>    
-          <div class="col-sm-4 col-md-4">
-            <img src="images/css.png">  
-          </div>
-          <div class="col-sm-4 col-md-4">
-            <img src="images/js.png">  
-          </div>
-        </div>
-      </div> 
-    </div>
-
-    <div class="banner">
-      <div class="container">
-        <h3>Tools</h3>
-        <div class="row">
-          <div class="col-sm-4 col-md-4">
-            <img src="images/bootstrap.png">
-          </div>    
-          <div class="col-sm-4 col-md-4">
-            <img src="images/jquery.png">  
-          </div>
-          <div class="col-sm-4 col-md-4">
-            <img src="images/github.png">  
-          </div>
-        </div>
-      </div> 
     </div>
 
     <div class="projects">
@@ -84,18 +50,57 @@
               <figure class="gallery-item">
                 <img src="images/jackwelpott.jpg" class="img-responsive" alt="Responsive image">
                 <figcaption class="img-title">
-                  <p>Photography Website<br>Languages: HTML, CSS, Javascript, PHP</p>    
+                  <p>Jack Welpott Photography<br>Technologies: PHP, JavaScript, Jquery, Bootstrap</p>    
                 </figcaption>
               </figure>
             </a>
           </div>
         </div>
-      </div>
+        <div class="row">
+          <div class="col-sm-12 col-md-12">
+            <a href="#">
+              <figure class="gallery-item">
+                <img src="images/jobplus.jpg" class="img-responsive" alt="Responsive image">
+                <figcaption class="img-title">
+                  <p>Job+<br>Technologies: React, Redux, Node.js, Redis, Webpack, Mocha, Enzyme</p>    
+                </figcaption>
+              </figure>
+            </a>
+          </div>
+        </div>
+      </div>      
+    </div>
+
+    <div class="books">
+      <div class="container">
+        <h1>Bookshelf</h1>
+        <p>Below is a list of books that challenged my thinking or deeply influenced my views on Technology and Business.</p>
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="bookWrapper">
+              <img src="images/DMMT.jpg" class="img-responsive" alt="Responsive image">
+              <p>One of the first books I read on web design. Steve Krug boils down the basics to into very easy to remeber guidlines.</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="bookWrapper">
+              <img src="images/edwardTufte.jpg" class="img-responsive" alt="Responsive image">
+              <p>Tufte's series on the visualization of Information are intersting for their insights as well as the historical examples given throughout each volume.</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="bookWrapper">
+              <img src="images/YDKJS.jpg" class="img-responsive" alt="Responsive image">
+              <p>If you are more of a scribe than a conjuror Kyle Simspsons series on JavaScript dives deep into what makes JS great.</p>
+            </div>
+          </div>
+        </div>
+      </div>      
     </div>
 
     <div class="contact">
       <div class="container">
-        <h3>Contact</h3>
+        <h1>Contact</h1>
         <p>If you'd like to get in touch email ngdaniele (at) gmail (dot) com or send me a message via social media.</p>
         <a href="https://www.linkedin.com/in/nicholas-daniele-68969934"><img src="images/linkedinsm.png"></a>
         <a href="https://twitter.com/Nick_Daniele"><img src="images/twittersm.png"></a>  
