--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div class="projects">
       <div class="container">
         <h1>Projects</h1>
+        <p>Below are a few projects I have been working on recently.</p>
         <div class="row">
           <div class="col-sm-12 col-md-12">
             <a href="#">
